--- a/src/global.css
+++ b/src/global.css
@@ -2,15 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-html,body,#root{
+html, body, #root {
   height: 100%;
-  
 }
 
-body{
-  background: #000000;
+body {
+  background: theme('colors.backgroundColor');
   color: theme('colors.textColor');
-  font-family: 'Roboto', sans-serif;
-  margin: 0;
 }
-
